--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -22,8 +22,11 @@
     align-items: center;
     
 }
+.user1{
+    
+}
 
-.c-right .user{
+/* .c-right .user{
     width: 25rem;
     height: 2rem;
     padding: 0.6em;
@@ -31,7 +34,7 @@
     border: 2px solid var(--orange);
     border-radius: 12px;
     font-size: 18px;   
-}
+} */
 
 textarea{
     height: 4rem!important;
