--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,10 +1,10 @@
-.portfolio {
+/* .portfolio {
   display: flex;
-
   flex-direction: column;
   height: 65vh;
 
 }
+
 /* heading */
 .portfolio span:nth-of-type(1) {
   color: var(--black);
@@ -19,8 +19,13 @@
 }
 
 /* slider */
-.portfolio .swiper{
-    overflow: visible!important;
+.portfolio .swiper {
+  display: flex;
+  overflow: scroll;
+}
+
+.portfolio .swiper::-webkit-scrollbar {
+  display: none; /* Hide the scrollbar */
 }
 
 .portfolio-slider {
@@ -31,10 +36,14 @@
 .portfolio-slider .swiper-slide {
   width: 20rem;
 }
+
 .portfolio img {
   width: 21rem;
   height: 13rem;
   filter: drop-shadow(-12px 15px 13px rgba(0, 0, 0, 0.25));
   border-radius: 19px;
-}
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
 
+}
