--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -15,14 +15,56 @@
   margin-top: 4rem;
   gap: 1rem;
   color: rgb(255, 255, 255);
+  margin-top:-1.3rem;
 }
-.f-icons {
+
+.f-content span {
+  font-size: 1.5rem;
+  margin-top: 8rem;
+}
+
+.f-content p{
+  font-size: 1.2rem;
+  margin-top: -0.6rem;
+}
+
+.i-icons {
+  margin-top: 3rem;
   display: flex;
-  gap: 2rem;
+  gap: 0rem;
+  margin-bottom: 2rem;
 }
+.i-icons > * {
+  transform: scale(0.5);
+}
+.i-icons > *:hover {
+  cursor: pointer;
+}
+.wave {
+  width: 100%;
+  height: 31rem;
+}
+
+/* .email-link {
+  color: var(--orange);
+  text-decoration: underline;
+} */
+
 
 @media screen and (max-width: 600px){
   .f-content{
     transform: scale(0.5);
   }
+  .wave {
+    width: 100%;
+    height: 25rem;
+  }
+  .f-content span {
+    font-size: 1.6rem;
+  }
+  .f-content p{
+    font-size: 1.6rem;
+    margin-top: -0.6rem;
+  }
+  
 }
