--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -53,25 +53,29 @@
   flex: 1;
   position: relative;
 }
+
 .i-right > * {
   position: absolute;
   z-index: 1;
 }
+
 .i-right > :nth-child(1) {
   transform: scale(0.69);
   left: -15%;
   top: -9%;
 }
+
 .i-right > :nth-child(2) {
   top: -4.6rem;
   transform: scale(0.67);
   left: -3rem;
 }
+
 .i-right > :nth-child(3) {
   transform: scale(1.1);
   left: 10%;
-  
 }
+
 .i-right > :nth-child(4) {
   transform: scale(0.62);
   top: -19%;
@@ -79,6 +83,11 @@
   border-radius: 50%;
   padding: 0;
 }
+
+.i-right > * img {
+  filter: brightness(1.5) contrast(1); 
+}
+
 
 /* blur */
 .blur {
